# proxmox_cluster_tasks

./: .gitignore  README-long.md  README.md  config.toml  dot_env  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
configs/: config.toml  scenarios_configs-orig.yaml  scenarios_configs.yaml  scenarios_configs_clone_vm.yaml
docs/: part1-introduction.md  part2-api-reference.md  part3-setup.md  part4-1-proxmoxapi-examples.md  part4-2-advanced-examples.md  part4-3-proxmoxapi-filtering.md  part4-4-debug.md  part5-configuration.md  part6-scenarios.md  part7-testing.md
src/: __init__.py  main.py
src/cluster_tasks/: api.py  cli.py  config.py  configure_logging.py  controller.py  controller_async.py  controller_sync.py  debug_api.py  debug_api_async.py  debug_api_sync.py  debug_ext_api.py  debug_task_async.py  debug_task_sync.py  loader_scene.py  main.py  scenarios_configs.yaml
src/cluster_tasks/_api/: handler.py
src/cluster_tasks/backends/: abstract_backends.py  api_http.py  backends.py  http.py  http_backend.py  http_ha_groups.py  registry.py
src/cluster_tasks/ext_abs/: backends.py  base.py  root.py
src/cluster_tasks/ext_api/: ext_api.py  handler.py  proxmox_api.py
src/cluster_tasks/ext_cli/: handler.py
src/cluster_tasks/proxmox_api/: proxmox_api.py
src/cluster_tasks/resources/: _template.py  cluster.py  cluster_ha.py  config.py  nodes.py  resources.py  resources.toml  utils.py
src/cluster_tasks/scenarios/: clone_template_vm_async.py  clone_template_vm_base.py  clone_template_vm_sync.py  scenario_base.py  scenario_clone_template_vm.py  sequence_scenarios_async.py  sequence_scenarios_base.py
src/cluster_tasks/tasks/: _template.py  base_tasks.py  cluster.py  cluster_ha.py  node_tasks_async.py  node_tasks_base.py  node_tasks_sync.py  proxmox_tasks_async.py  proxmox_tasks_base.py  proxmox_tasks_sync.py  proxmoxtasks.py
src/config/: config.py
src/config_loader/: config.py
src/ext_api/: proxmox_api.py  proxmox_api_sim.py  proxmox_base_api.py
src/ext_api/backends/: backend_abstract.py  backend_cli.py  (+4 more)
src/proxmox_cluster_tasks/: config.py
tests/: _pytest.ini  _test_backend_ssh_sync.py  conftest.py  pytest.ini  test_api.py  test_backend.py  test_backend_cli_sync.py  test_backend_https_async.py  test_backend_https_sync.py  test_backend_ssh_sync.py
(+6 files in other folders)
